# greenatom-web

./: pyproject.toml  review_movie.ipynb
app/: main.py
src/greenatom_web/: predict.py
