[project]
name = "greenatom-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.2",
    "accelerate>=1.0.1",
    "datasets>=3.0.1",
    "evaluate>=0.4.3",
    "numpy>=1.26.4",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
    "transformers>=4.45.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
